@@ -26,10 +26,9 @@
         <relativePath>../beam-plugin-parent/pom.xml</relativePath>
     </parent>
 
-    <groupId>org.esa.beam</groupId>
     <artifactId>beam-pgx-reader</artifactId>
     <name>BEAM PGX Product Reader</name>
-    <version>1.0.0.${beam.version}</version>
+    <version>1.0.1.${beam.version}</version>
     <url>http://envisat.esa.int/beam/</url>
 
     <dependencies>
